--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,22 +1,14 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "isolatedModules": true,
-    "moduleDetection": "force",
-    "noEmit": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "include": ["vite.config.ts"]
-}
+        "compilerOptions": {
+          "target": "es2020",
+          "module": "commonjs",
+          "esModuleInterop": true,
+          "outDir": "./dist",
+          "strict": true,
+          "skipLibCheck": true,
+          "moduleResolution": "node",
+          "resolveJsonModule": true,
+          "jsx": "react-jsx"
+        },
+        "include": ["./src/**/*"]
+      }
