--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kollab",
+  "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,29 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@react-pdf/renderer": "^3.4.0",
-    "@supabase/supabase-js": "^2.39.7",
-    "date-fns": "^3.3.1",
-    "i18next": "^23.10.1",
-    "i18next-browser-languagedetector": "^7.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "react-i18next": "^14.1.0",
-    "react-world-flags": "^1.6.0",
-    "uuid": "^9.0.1",
-    "xlsx": "^0.18.5"
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/react-world-flags": "^1.4.5",
-    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
