--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "nicos-insights-backend",
-  "private": true,
+  "name": "restopilot",
   "version": "1.0.0",
+  "description": "RestoPilot: Application de gestion globale pour restaurants",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "node src/index.js",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "npm run backend & npm run frontend",
+    "backend": "node src/index.js",
+    "frontend": "vite --port 5174",
+    "install-all": "npm install && cd src && npm install"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.12.0",
-    "csv-parser": "^3.2.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "lucide-react": "^0.344.0",
-    "multer": "^2.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.12.7"
+    "@supabase/supabase-js": "^2.43.4",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "xlsx": "^0.18.5",
+    "react-i18next": "^14.1.2",
+    "lucide-react": "^0.400.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
